find_package(gflags REQUIRED)
find_package(glog REQUIRED)
find_package(benchmark REQUIRED)
include_directories ("~/gflags/build-dir")
include_directories ("~/glog/build")
include_directories ("/usr/local/lib/cmake/benchmark")

ADD_EXECUTABLE(mergeSortTest mergeSortTest.cpp)
ADD_EXECUTABLE(mergeSort mergeSort.cpp)
target_link_libraries (mergeSort gflags)
target_link_libraries (mergeSort glog)
target_link_libraries(mergeSortTest benchmark::benchmark)
