find_package(gflags REQUIRED)
find_package(glog REQUIRED)
find_package(benchmark REQUIRED)
find_package(GTest REQUIRED)
find_package(Threads REQUIRED)
include_directories ("~/gflags/build-dir")
include_directories ("~/glog/build")
include_directories ("/usr/local/lib/cmake/benchmark")
include_directories ("~/googletest/build/googletest/generated")

ADD_EXECUTABLE(main main.cpp merge_sort.cpp)
ADD_EXECUTABLE(merge_sort_benchmark merge_sort_benchmark.cpp merge_sort.cpp)
ADD_EXECUTABLE(merge_sort_test merge_sort_test.cpp merge_sort.cpp)
target_link_libraries(main gflags)
target_link_libraries(main glog)
target_link_libraries(merge_sort_benchmark benchmark::benchmark)
target_link_libraries(merge_sort_benchmark pthread)
target_link_libraries(merge_sort_test gtest gtest_main)
target_link_libraries(merge_sort_test pthread)
